[gd_scene load_steps=30 format=2]

[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=1]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteBrown.png" type="Texture" id=4]
[ext_resource path="res://resources/offline_mode_Asset/level_6/brown.png" type="Texture" id=5]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteBlue.png" type="Texture" id=6]
[ext_resource path="res://resources/offline_mode_Asset/level_6/orange.png" type="Texture" id=7]
[ext_resource path="res://resources/offline_mode_Asset/level_6/blue.png" type="Texture" id=8]
[ext_resource path="res://resources/offline_mode_Asset/level_6/green.png" type="Texture" id=9]
[ext_resource path="res://resources/offline_mode_Asset/level_6/rj45.png" type="Texture" id=10]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteOrange.png" type="Texture" id=11]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteGreen.png" type="Texture" id=12]
[ext_resource path="res://resources/font/Tiktok.otf" type="DynamicFontData" id=13]
[ext_resource path="res://offline_levels/level6/slot.gd" type="Script" id=14]
[ext_resource path="res://offline_levels/level6/wire.gd" type="Script" id=15]
[ext_resource path="res://offline_levels/level6/manager.gd" type="Script" id=16]
[ext_resource path="res://resources/font/SERIO___.TTF" type="DynamicFontData" id=17]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=18]
[ext_resource path="res://resources/soundtrack/level/wire.wav" type="AudioStream" id=19]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=20]
[ext_resource path="res://resources/offline_mode_Asset/level_6/23.png" type="Texture" id=21]
[ext_resource path="res://resources/offline_mode_Asset/level_6/22.png" type="Texture" id=22]
[ext_resource path="res://resources/Themes/level2_theme.tres" type="Theme" id=23]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=24]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 52
extra_spacing_bottom = 28
font_data = ExtResource( 17 )

[node name="level6" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
wire_container = NodePath("wire_container")
slot_container = NodePath("rj45/slot_container")
submit_button = NodePath("button_container/crimp")
type_label = NodePath("cable_type")
game_over = NodePath("popup_layer/game_over")
gameover_indicator = NodePath("popup_layer/game_over/main_popup/indicator")
gameover_score = NodePath("popup_layer/game_over/main_popup/score")
popup_next_button = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
popup_retry_button = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
tutorial_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instruction_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level6")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
settings_data = ExtResource( 18 )

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 3 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 1 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 2 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "Simply tap and hold on the file icon. While holding, drag it towards the folder that you believe is the most suitable match for the file's content. Release your finger to drop the file into the chose folder. Make strategic choices to efficiently organize your files and progress through the game's challenges. Good luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 1 )
anims/animation = SubResource( 2 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level3" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="1"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
visible = false

[node name="level5" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="3"]
visible = false

[node name="level7" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="4"]
visible = false

[node name="level8" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="5"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="bg" type="NinePatchRect" parent="."]
margin_right = 1924.0
margin_bottom = 1083.0
texture = ExtResource( 22 )

[node name="table" type="NinePatchRect" parent="."]
margin_left = -112.0
margin_top = 146.0
margin_right = 1193.0
margin_bottom = 1077.0
texture = ExtResource( 21 )

[node name="rj45" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = -370.0
margin_right = 1047.0
margin_bottom = 671.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )

[node name="slot_container" type="Control" parent="rj45"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="slot1" type="TextureRect" parent="rj45/slot_container"]
margin_left = 145.0
margin_top = 64.0
margin_right = 209.0
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot2" type="TextureRect" parent="rj45/slot_container"]
margin_left = 225.333
margin_top = 64.0
margin_right = 289.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot3" type="TextureRect" parent="rj45/slot_container"]
margin_left = 305.333
margin_top = 64.0
margin_right = 369.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot4" type="TextureRect" parent="rj45/slot_container"]
margin_left = 385.333
margin_top = 64.0
margin_right = 449.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot5" type="TextureRect" parent="rj45/slot_container"]
margin_left = 465.333
margin_top = 64.0
margin_right = 529.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot6" type="TextureRect" parent="rj45/slot_container"]
margin_left = 545.333
margin_top = 64.0
margin_right = 609.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot7" type="TextureRect" parent="rj45/slot_container"]
margin_left = 625.333
margin_top = 64.0
margin_right = 689.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="slot8" type="TextureRect" parent="rj45/slot_container"]
margin_left = 705.333
margin_top = 64.0
margin_right = 769.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 14 )
type = "slot"

[node name="button_container" type="GridContainer" parent="."]
margin_left = 1206.0
margin_top = 970.0
margin_right = 1656.0
margin_bottom = 1045.0
rect_min_size = Vector2( 200, 75 )
custom_constants/hseparation = 50
columns = 2

[node name="reset" type="Button" parent="button_container"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
theme = ExtResource( 23 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "CLEAR"

[node name="crimp" type="Button" parent="button_container"]
margin_left = 250.0
margin_right = 450.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
theme = ExtResource( 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "CRIMP"

[node name="wire_container" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 247.0
margin_right = 962.0
margin_bottom = 984.0
rect_min_size = Vector2( 862, 737 )
custom_constants/separation = 50

[node name="wire1" type="TextureRect" parent="wire_container"]
margin_right = 64.0
margin_bottom = 737.0
texture = ExtResource( 11 )
script = ExtResource( 15 )
type = "wire"

[node name="wire2" type="TextureRect" parent="wire_container"]
margin_left = 114.0
margin_right = 178.0
margin_bottom = 737.0
texture = ExtResource( 7 )
script = ExtResource( 15 )
type = "wire"

[node name="wire3" type="TextureRect" parent="wire_container"]
margin_left = 228.0
margin_right = 292.0
margin_bottom = 737.0
texture = ExtResource( 12 )
script = ExtResource( 15 )
type = "wire"

[node name="wire4" type="TextureRect" parent="wire_container"]
margin_left = 342.0
margin_right = 406.0
margin_bottom = 737.0
texture = ExtResource( 8 )
script = ExtResource( 15 )
type = "wire"

[node name="wire5" type="TextureRect" parent="wire_container"]
margin_left = 456.0
margin_right = 520.0
margin_bottom = 737.0
texture = ExtResource( 6 )
script = ExtResource( 15 )
type = "wire"

[node name="wire6" type="TextureRect" parent="wire_container"]
margin_left = 570.0
margin_right = 634.0
margin_bottom = 737.0
texture = ExtResource( 9 )
script = ExtResource( 15 )
type = "wire"

[node name="wire7" type="TextureRect" parent="wire_container"]
margin_left = 684.0
margin_right = 748.0
margin_bottom = 737.0
texture = ExtResource( 4 )
script = ExtResource( 15 )
type = "wire"

[node name="wire8" type="TextureRect" parent="wire_container"]
margin_left = 798.0
margin_right = 862.0
margin_bottom = 737.0
texture = ExtResource( 5 )
script = ExtResource( 15 )
type = "wire"

[node name="cable_type" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 111.0
margin_top = -494.0
margin_right = 973.0
margin_bottom = -382.0
custom_fonts/font = SubResource( 4 )
text = "Wiring Standard: "
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[node name="instruction" type="Button" parent="."]
margin_left = 1810.0
margin_top = 971.0
margin_right = 1910.0
margin_bottom = 1071.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 20 )

[node name="manager" parent="." instance=ExtResource( 24 )]

[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="button_container/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="button_container/crimp" to="." method="_on_crimp_pressed"]
[connection signal="pressed" from="instruction" to="." method="_on_Button_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
